install(FILES
    abstract.png
    alien-artifact.png
    basket-title.png
    green-curves.png
    light.png
    painting.png
    pens.png
    pins.png
    rainbow-balls.png
    rounds-line.png
    strings.png
    todo.png
    working.png
    DESTINATION ${KDE_INSTALL_DATADIR}/basket/backgrounds/previews
)
